# jiit-planner

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
jiit_planner/: __init__.py  routes.py  wsgi.py
jiit_planner/assets/css/: about.css  index.css
jiit_planner/assets/js/: main.js
jiit_planner/assets/public/: site.webmanifest
jiit_planner/templates/: about.html  index.html  planner.html
xl_cache/: text.txt
xl_cache/jiit_tt_parser/: bca_sem1.xlsx  bca_sem1_new.xlsx  bca_sem3.xlsx  fac1.xlsx  fac2.xlsx  faculty.json  sem1.xlsx  sem3.xlsx
